Feb 26, 2007

  * ADDED: Keep connections open on not_modified and replying files.

Feb 9, 2007

  * ADDED: Support for 302 (moved temporary) HTTP replies to the server.

Feb 8, 2007

  * ADDED: Map existence_error(http_location, URL) and 
    permission_error(http_location, access, URL) to appropriate HTTP
    headers.

Feb 2, 2007

  * ADDED: Report status of stopped worker.

Jan 24, 2007

  * ADDED: Support for 303 (see other) HTTP replies to the server.
    Yves Raimond.

Jan 18, 2007

  * ADDED: html_set_options/1 and html_current_option/1 to html_write.pl.
    Allows for changing the document type as well as writing XHTML output
    from the same DCG rules.

Jan 15, 2007

  * ADDED: Redirect support for 301 and 303.  Yves Raimond.

Dec 13, 2006

  * FIXED: avoid passing reply_header option to convert hooks (conflict
    with SGML plugin).

Dec 12, 2006

  * FIXED: Properly close sockets on errors in http_open/3.

Dec 8, 2006

  * ADDED: support for HEAD to http_open/3.

Oct 31, 2006

  * ENHANCED: Documentation

Oct 30, 2006

  * ADDED: Allow for A+B in attribute values.

Sep 18, 2006

  * FIXED: inetd_httpd: set stream encoding to octet to be able to handle
    binary data.  Nicos Angelopoulos.

Aug 21, 2006

  * FIXED: Quote & inside attribute values.

Aug 10, 2006

  * ENHANCED: Time printing in http_header.pl to use format_time/3.  Faster
    and proper implementation of daylight saving time.

Aug 8, 2006

  * FIXED: http_relative_path/2.

Aug 7, 2006

  * DEBUG: Do not generate debug info for library html_write.pl, as it makes
    code using the library very hard to debug.

Jun 30, 2006

  * FIXED: dangling choicepoint in http_open/3.

  * ADDED: zero_or_more as parameter option to http_parameters/[2,3]

Apr 11, 2006

  * ADDED: http_parameters library

  * FIXED: properly handle the server closing the connection if the connection
    is specified as Keep-alive in the client (http_get/3 and http_post/4).

Feb 24, 2006
